# ndpi_speed

./: .gitignore
archive/mark-1/: Makefile.in  QUICKSTART.md  README_ndpiBenchmark.md  benchmark_util.c  ndpiBenchmark.c  ndpiBenchmark.h  run_benchmark.sh
archive/mark0/: CMakeLists.txt  README.md  README_cn.md
archive/mark0/benchmark_results/: benchmark_results_20260306_105300.csv
archive/mark0/include/: flow_table.h  ndpi_benchmark.h  packet_parser.h
archive/mark0/scripts/: run_benchmark.sh
archive/mark0/src/: benchmark_util.c  flow_state_demo.c  flow_table.c  main.c  packet_parser.c
archive/ssh_detector/: README.md  ssh_detector.c
binary/: ndpiBenchmark  ndpiBenchmarkAggLB  ndpiBenchmarkBatch  ndpiBenchmarkClassified  ndpiBenchmarkMem  ndpiBenchmarkSingleHash
mark1/: CMakeLists.txt  README.md  run.sh
mark1/include/: benchmark_internal.h  ndpi_benchmark.h
mark1/src/: main.c  packet_parser.c  reader.c  rss_table.c  worker.c
mark2/: CMakeLists.txt  README.md
mark2/include/: benchmark_internal.h
mark2/src/: reader.c
mark3/: CMakeLists.txt  README.md
mark3/build_mark3/: ndpiBenchmarkMark3
mark3/include/: benchmark_internal.h  ndpi_benchmark.h
mark3/src/: benchmark_common.c  flow_table.c  main.c  reader.c  rss_table.c
scripts/: benchmark_sweep_mark0.py  benchmark_sweep_mark1.py  benchmark_sweep_mark1_singlecore.py  benchmark_sweep_mark2.py  benchmark_sweep_mark3.py  core_hash_boxplot_32.py  generate_1500b_pcap.py  plot_0306_main_time_compare.py  plot_process_time_variants.py  prepare_benchmark_env.sh  run.sh  run_mark1_sweep_all_10g.sh  sweep3.yaml  wsl_vcpu_singlethread_bench.py
